--- a/about.html
+++ b/about.html
@@ -17,8 +17,10 @@
     <div id="bodycontent">
         <!-- I added brief introduction about myself -->
 
-        <p>Hello There, My name is Kirtan Patel. Currently, I am a senior at
-        University of Massachusetts Lowell in Computer Science.</p>
+        <p>Hi everyone! My name's Karishma and I created this blog to pursue my passions.
+          Sharing those passions with others around me gives me joy which is why I created FashionistaEye.
+          I'm excited to share my wonderings and experiences with you all,
+          so feel free to explore my site and let me know what you think!</p>
     </div>
 </body>
 </html>
