--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
         <h2>Contact</h2>
 
         <p>Feel Free to Contact me, If you have suggestions to make. shot me an
-        <a href="mailto:kpatel@cs.uml.edu">email!</a>.</p>
+        <a href="mailto:karishma694@gmail.com">email!</a>.</p>
 
         <div class="wrap">
-            <p>Created by Kirtan Patel. &copy; 2014.</p>
+            <p>Created by Kirtan Patel. &copy; 2017.</p>
         </div>
     </div><!-- end of footer block -->
     <!-- end of body -->
