--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <!--
-  File: 
-  91.460 Assignment: 7
-  Creating a Single-Page Navigation Interface by using js file and also, i have gotten some help from mihir patel
-  Kirtan Patel, UMass Lowell Compter Science, 
-  kirtan_patel@student.uml.edu
-  Created: November 8, 2014 -->
+  Created: Decemeber 21, 2017 -->
 
 <html>
 <head>
     <meta charset="utf-8">
 
-    <title>Navigation Example</title><!-- The CSS theme for the site. -->
+    <title>Fashionistaeye</title><!-- The CSS theme for the site. -->
     <link href="style.css" rel="stylesheet"><!-- Include jQuery. -->
 
     <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
