--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,9 @@
     <div id="Contact">
         <h2>Contact</h2>
 
-        <p>Feel Free to Contact me, If you have suggestions to make. shot me an
-        <a href="mailto:karishma694@gmail.com">email!</a>.</p>
+        <p>Feel Free to Contact me, If you have suggestions to make shoot me an
+        <a href="mailto:karishma694@gmail.com">email</a>.</p>
 
-        <div class="wrap">
-            <p>Created by Kirtan Patel. &copy; 2017.</p>
-        </div>
     </div><!-- end of footer block -->
     <!-- end of body -->
     <!-- end of html -->
