updated more style

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,14 @@
     <title>Contact</title>
     <!-- contact ID of the website that includes creator of site by -->
 </head>
+<style>
+<body {
+    background-image: url("img_tree.jpg");
+    background-repeat: no-repeat;
+    background-position: right top;
+    margin-right: 200px;
+}
+</style>
 
 <body>
     <div id="Contact">
