--- a/home.html
+++ b/home.html
@@ -1,5 +1,8 @@
 <style>
 	body {
 		background-image: url("home.jpg");
+		background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center; 
 	}
 </style>
