--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <style>
 <body {
-    background-image: url("img_tree.jpg");
+    background-image: url("img_tree.png");
     background-repeat: no-repeat;
     background-position: right top;
     margin-right: 200px;
