--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,12 @@
     <!-- contact ID of the website that includes creator of site by -->
 </head>
 <style>
-<body {
-    background-image: url("img_tree.png");
+	body {
+		background-image: url("img_tree.png");
     background-repeat: no-repeat;
     background-position: right top;
     margin-right: 200px;
-}
+	}
 </style>
 
 <body>
