--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
 	body {
 		background-image: url("img_tree.png");
     background-repeat: no-repeat;
-    background-position: right top;
-    margin-right: 200px;
+    background-attachment: fixed;
+    background-position: right; 
 	}
 </style>
 
