--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,8 @@
 		background-image: url("img_tree.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: right; 
+    background-position: right top;
+    background-size: auto;
 	}
 </style>
 
