--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,8 @@
     background-attachment: fixed;
     background-position: right top;
     background-size: auto;
+    width: 300px;
+    height: 300px;
 	}
 </style>
 
