--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,8 @@
 	body {
 		background-image: url("img_tree.png");
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-position: right top;
-    background-size: auto;
-    width: 300px;
-    height: 300px;
+    background-size: initial;
 	}
 </style>
 
