--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <style>
 	body {
-		background-image: url("home.jpg");
+		background-image: url("home.JPG");
 		background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center; 
