--- a/contact.html
+++ b/contact.html
@@ -7,20 +7,22 @@
     <title>Contact</title>
     <!-- contact ID of the website that includes creator of site by -->
 </head>
-<style>
-	body {
-		background-image: url("img_tree.png");
-    background-position: right top;
-    background-size: initial;
-	}
-</style>
 
 <body>
     <div id="Contact">
         <h2>Contact</h2>
 
+
+    <img width="600" height="400" src="images/IMG_4409.JPG">
+
+  <!-- strong = bold, i=italic,  -->
+   <p>Hi everyone! My name's Karishma and I created this blog to pursue my passions.
+    Sharing those passions with others around me gives me joy which is why I created FashionistaEye.I'm excited to share my wonderings and experiences with you all,
+    so feel free to explore my site and let me know what you think!</p>
+
+
         <p>Feel Free to Contact me, If you have suggestions to make shoot me an
-        <a href="mailto:karishma694@gmail.com">email</a>.</p>
+        <a href="mailto:fashionista.eye@gmail.com">email</a>.</p>
 
     </div><!-- end of footer block -->
     <!-- end of body -->
