--- a/home.html
+++ b/home.html
@@ -1,6 +1,12 @@
-<style>
-	body {
-		background-image: url("home.JPG");
-		background-repeat: no-repeat;
-	}
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Images</title>
+</head>
+<body>
+
+    <img width="600" height="400" src="images/home.JPG">
+
+</body>
+</html>
