--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<!--
-  Created: Decemeber 21, 2017 -->
-
 <html>
 <head>
     <meta charset="utf-8">
 
     <title>Fashionistaeye</title><!-- The CSS theme for the site. -->
-    <link href="style.css" rel="stylesheet"><!-- Include jQuery. -->
+    <link href="style.css" rel="stylesheet">
 
-    <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 </head>
 
 <body>
@@ -17,19 +13,17 @@
 
     <div>
         <div id="navbar">
-            <ul>
-                <li>
-                    <a href="#home">Home</a>
-                </li>
 
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
-            </ul>
+
         </div>
-    </div><!-- Dynamic content will be placed here by JavaScript. -->
+    </div>
+
+    <img src="images/home.JPG" alt="home" class="center">
 
     <div id="content"></div><!-- The JavaScript code for dynamic behavior. -->
-    <script src="navigation.js"></script>
+
 </body>
 </html>
