--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
    <p><strong>Hi everyone!</strong> My name's <i>Karishma</i> and I created this blog to pursue my passions.
     Sharing those passions with others around me gives me joy which is why I created FashionistaEye.
     <p>I'm excited to share my wonderings and experiences with you all!! </p>
-    <p>Feel Free to Contact me, If you have suggestions to make shoot me an <a href="mailto:fashionista.eye@gmail.com">email</a>.</p>
+    <p>Feel Free to Contact me, If you have suggestions to make shoot me an <a href="mailto:info@fashionistaeye.com">email</a>.</p>
 
  
     </div><!-- end of footer block -->
